<resources>
    <string name="app_name">Road To Adventure</string>

    <string name="allow_word">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="loading">讀取中</string>
    <string name="success">成功</string>
    <string name="fail">失敗</string>
    <string name="empty">空的</string>
    <string name="stop">停止</string>
    <string name="space"> </string>
    <string name="start">開始</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="old_password">舊密碼</string>
    <string name="new_password">新密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="email">信箱</string>
    <string name="name">名字</string>
    <string name="verification">驗證</string>
    <string name="verification_code">驗證碼</string>
    <string name="verification_code_format_error">驗證碼格式不符</string>
    <string name="reset_password">重設密碼</string>
    <string name="update_password">修改密碼</string>
    <string name="update_profile">修改資料</string>
    <string name="logout">登出</string>
    <string-array name="journey_status">
        <item>規劃中</item>
        <item>進行中</item>
        <item>已完成</item>
    </string-array>
    <string-array name="choose_picture">
        <item>從圖庫</item>
        <item>拍照</item>
    </string-array>
    <!-- Error -->
    <string name="connection_error">連線錯誤</string>
    <string name="empty_error">不能是空的</string>
    <string name="confirm_password_error">確認密碼錯誤</string>
    <string name="credit_card_error">信用卡號錯誤</string>
    <string name="code_error">安全碼錯誤</string>
    <string name="server_error_null">伺服器回傳錯誤(null)</string>
    <string name="login_error">使用者名稱或密碼錯誤</string>
    <string name="email_error">信箱格式不符</string>
    <string name="modify_data_error">修改資料失敗</string>
    <string name="modify_password_error">修改密碼失敗</string>
    <string name="permission_denied">權限不足</string>
</resources>
